@@ -1384,46 +1384,33 @@ class tslib_cObj {
 
 				// imageFileLink:
 			if ($content == $string && @is_file($imageFile)) {
-				$params = '';
-				if ($conf['width']) {
-					$params .= '&width=' . rawurlencode($conf['width']);
-				}
-				if ($conf['height']) {
-					$params .= '&height=' . rawurlencode($conf['height']);
-				}
-				if ($conf['effects']) {
-					$params .= '&effects=' . rawurlencode($conf['effects']);
-				}
-				if ($conf['sample']) {
-					$params .= '&sample=1';
-				}
-				if ($conf['alternativeTempPath']) {
-					$params .= '&alternativeTempPath=' . rawurlencode($conf['alternativeTempPath']);
+				$parameterNames = array('width', 'height', 'effects', 'alternativeTempPath', 'bodyTag', 'title', 'wrap');
+				$parameters = array();
+
+				if (isset($conf['sample']) && $conf['sample']) {
+					$parameters['sample'] = 1;
 				}
 
-					// includes lines above in cache
-				$showPicContent = '
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+				foreach ($parameterNames as $parameterName) {
+					if (isset($conf[$parameterName]) && $conf[$parameterName]) {
+						$parameters[$parameterName] = $conf[$parameterName];
+					}
+				}
 
-<html>
-<head>
-	<title>' . htmlspecialchars($conf['title'] ? $conf['title'] : 'Image') . '</title>
-	' . ($conf['title'] ? '' : '<meta name="robots" content="noindex,follow" />') . '
-</head>
-		' . ($conf['bodyTag'] ? $conf['bodyTag'] : '<body>');
+				$parametersEncoded = base64_encode(serialize($parameters));
 
-				$wrapParts = explode('|', $conf['wrap']);
-				$showPicContent .= trim($wrapParts[0]) . '###IMAGE###' . trim($wrapParts[1]);
-				$showPicContent .= '
-		</body>
-		</html>';
-				$contentHash = md5('showpic' . $showPicContent);
-				t3lib_pageSelect::storeHash($contentHash, $showPicContent, 'showpic');
+				$md5_value = t3lib_div::hmac(
+					implode(
+						'|',
+						array($imageFile, $parametersEncoded)
+					)
+				);
 
-				$md5_value = md5($imageFile . '|' . $conf['width'] . '|' . $conf['height'] . '|' .
-					$conf['effects'] . '||||' . $GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey'] . '|');
+				$params = '&md5=' . $md5_value;
+				foreach (str_split($parametersEncoded, 64) as $index => $chunk) {
+					$params .= '&parameters[' . $index . ']=' . rawurlencode($chunk);
+				}
 
-				$params .= '&md5=' . $md5_value . '&contentHash=' . $contentHash;
 				$url = $GLOBALS['TSFE']->absRefPrefix . 'index.php?eID=tx_cms_showpic&file=' . rawurlencode($imageFile) . $params;
 
 				if ($conf['directImageLink']) {
